remove border on bottom toolbar; fix hacky spacing of top elements

--- a/web/toolbar.css
+++ b/web/toolbar.css
@@ -20,7 +20,8 @@ body {
 }
 
 .hitem {
-    padding-right: 6px;
+    padding-right: 12px;
+    padding-left: 12px;
     text-decoration: none;
     color: #000;
 }
